<resources>
    <string name="app_name">RCCamFrontend</string>
    <string name="port_number">Port Number</string>
    <string name="ip_address">IP Address</string>
    <string name="connect">CONNECT</string>
    <string name="temp">Temp</string>
    <string name="this_is_just_temporary">This is just temporary</string>
    <string name="face_detection_button">Face detection button</string>
    <string name="shutter_button">Shutter button</string>
    <string name="rotation_button">Rotation button</string>
    <string name="shutter">Shutter</string>
    <string name="face_detection">Face Detection</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="rcpi_cam">RCPI Cam</string>
    <string name="just_the_logo">Just the logo</string>
    <string name="yaw">Yaw</string>
    <string name="pitch">Pitch</string>
    <string name="dialog_rotat_height">10dp</string>
    <string name="dialog_rotat_width">10dp</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="maxRot">13</string>
    <string name="seconds">Seconds</string>
    <string name="share_latest_photo">Share Latest Photo</string>
    <string name="open_photo_gallery">Open Photo Gallery</string>
    <string name="about">About</string>
    <string name="contact">Contact me at 14nwise@debdenparkhighschool.org\nAll Rights Reserved</string>
    <string name="ip_nport">IP: Unknown\nPort: Unknown</string>
    <string name="version">Version: Unknown</string>
</resources>