<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connectConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Connect">

    <EditText
        android:id="@+id/textfieldPort"
        android:layout_width="310sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:digits="1234567890"
        android:ems="10"
        android:fontFamily="@font/agencyr"
        android:hint="@string/port_number"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfieldIP" />

    <EditText
        android:id="@+id/textfieldIP"
        android:layout_width="310sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208sp"
        android:digits="1234567890."
        android:ems="10"
        android:fontFamily="@font/agencyr"
        android:hint="@string/ip_address"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="15"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="220sp"
        android:layout_height="80sp"
        android:fontFamily="@font/agencyr"
        android:text="@string/connect"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfieldPort"
        app:layout_constraintVertical_bias="0.468" />

    <WebView
        android:id="@+id/hiddenWebview"
        android:layout_width="166sp"
        android:layout_height="77sp"
        android:layout_marginTop="120sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />


</androidx.constraintlayout.widget.ConstraintLayout>